# FortenLog

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  package.ps1  setup.ps1  setup.sh
deployment/: backup.sh  docker-compose.prod.yml  nginx.conf.template  prod_deploy.sh  prod_update.sh
docs/: BACKUP_AND_RESTORE.md  IMPLEMENTATION_DETAILS.md  SYSTEM_ARCHITECTURE.md  USER_INTERFACE_GUIDE.md  WIDGET_SCHEMA.md
docs/api/: REST_API.md
docs/architecture/: overview.md
docs/deployment/: docker.md
docs/development/: ARCHITECTURAL_REFERENCE.md  PERFORMANCE_REPORT.md
docs/security/: hardening.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_pii_masking.rs
scripts/: download_fonts.js  generate_rich_event.ps1  generate_test_data.ps1  massive_api_test.js  performance_benchmark.js  populate.ps1  test_ingestion.js
src/: lib.rs  main.rs  security.rs  ui.rs
src/auth/: audit.rs  mod.rs
src/db/: cache.rs  mod.rs  projects.rs  sqlite_project.sql  sqlite_system.sql  system.rs
src/handlers/: explorer.rs  export.rs  maintenance.rs  mod.rs  seed.rs  settings_audit.rs  uptime.rs  users.rs
src/handlers/api_keys/: mod.rs
src/handlers/auth/: history.rs  login.rs  mod.rs  session.rs  totp.rs  webauthn.rs
src/handlers/dashboard/: custom_dashboards.rs  custom_queries.rs  mod.rs  overview.rs
src/handlers/ingest/: capture.rs  envelope.rs  mod.rs  utils.rs  worker.rs
src/handlers/issues/: export.rs  mod.rs  query.rs  triage.rs
src/handlers/settings/: mod.rs  projects.rs  storage.rs  system.rs
src/middleware/: api_key.rs  auth.rs  mod.rs
src/models/: mod.rs
tests/: api_keys_test.rs  generate_mock.js  integration_test.rs  stress_test.rs
ui/: index.html
ui/css/: base.css  components.css  fonts.css  layout.css  style.css  views.css
ui/js/: api.js  app.js  auth.js  components.js  store.js  theme.js  utils.js  worldMapSvg.js
(+28 files in other folders)
