[package]
name = "forten_log"
version = "0.1.0"
edition = "2021"
default-run = "forten_log"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["chrono", "bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
zstd = { version = "0.13", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "limit"] }
jsonwebtoken = "9.0"
totp-rs = "4.0"
rust-embed = "8.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
base32 = "0.4"
sha2 = "0.10"
anyhow = "1.0"
dashmap = "5.5" # For in-memory deduplication/stacking
zip = { version = "1.1", default-features = false, features = ["deflate"] }
walkdir = "2.5"
aes-gcm = "0.10"
argon2 = "0.5"
reqwest = { version = "0.13.3", features = ["json"] }
moka = { version = "0.12", features = ["future", "sync"] }
rand = "0.8"
sysinfo = "0.30"
csv = "1.3"
futures-util = "0.3"

[profile.dev]
incremental = false    # Prevents huge incremental compilation cache
debug = 1              # Line tables only (drastically reduces PDB/binary size, but keeps line numbers in stack traces)

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Enable Link Time Optimization (drastically reduces size)
codegen-units = 1      # Maximize optimization over parallel compilation
strip = true           # Strip debug symbols automatically
panic = "abort"        # Abort on panic to remove unwinding overhead (saves size)
